--- a/nifi-stardog-connection-service-api-nar/pom.xml
+++ b/nifi-stardog-connection-service-api-nar/pom.xml
@@ -17,6 +17,12 @@
 			<artifactId>nifi-standard-services-api-nar</artifactId>
 			<version>${nifi.version}</version>
 			<type>nar</type>
+			<exclusions>
+				<exclusion>
+					<groupId>org.eclipse.jetty</groupId>
+					<artifactId>jetty-servlets</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 		<dependency>
 			<groupId>com.stardog</groupId>
